[tool.poetry]
name = "olist-segmentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"
ipykernel = "^6.26.0"
jinja2 = "^3.1.2"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
ipython = "^8.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
